Add system region to tooltip.

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -29,6 +29,8 @@
         <strong>Sov: {{system.sov}}</strong>
     {% endif %}
     <br />
+    <strong>Region: {{system.region}}</strong>
+    <br />
     {% load humanize %}
     <span class="sysLastScanned label {% if scanwarning  %} label-important {% endif %}">
         Last Scanned: {{system.lastscanned|naturaltime}}
