Only show region in tooltip for k-space systems.

--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -28,9 +28,11 @@
         <br />
         <strong>Sov: {{system.sov}}</strong>
     {% endif %}
+    {% if system.sysclass > 6 %}
     <br />
     <strong>Region: {{system.region}}</strong>
     <br />
+    {% endif %}
     {% load humanize %}
     <span class="sysLastScanned label {% if scanwarning  %} label-important {% endif %}">
         Last Scanned: {{system.lastscanned|naturaltime}}
