Combine tooltip updates to one per type

--- a/evewspace/Map/templates/map.html
+++ b/evewspace/Map/templates/map.html
@@ -12,7 +12,8 @@
 <img title="Refresh Map" height=32 width=32 src={{STATIC_URL}}images/reload.png onclick="RefreshMap();" />
 </div>
 <div id="mapDiv" class="mapDiv">
-
+</div>
+<div id="systemTooltipHolder">
 </div>
 <div id="legendDiv">
     <p class="text-info">
@@ -27,6 +28,8 @@
     </p>
 </div>
 <div id="logDiv" class="logDiv">
+</div>
+<div id="wormholeTooltipHolder" style="">
 </div>
 {% endblock %}
 {% block content %}
