Convert fast action menu to toolbar. TODO: Make it work right.

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -1,4 +1,5 @@
 {% load humanize %}
+{% include 'system_menu.html' %}
 <div id="sysPanelHeader" class="systemPanelHeader row">
     <div class="span6 page-header well well-large">
     <div class="dropdown">
