--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -1,6 +1,5 @@
 <div id="sysMenu" class="sysMenuDiv">
-<div class="btn-group btn-group-vertical">
-    <a class="btn" onclick="DisplaySystemDetails({{mapsys.pk}}, {{mapsys.system.pk}});" href="#sysInfo">Details </a>
+<div class="btn-group btn-group">
     {% if is_igb and mapsys.system.sysclass > 6 %}
     <a class="btn" onclick="CCPEVE.setDestination({{mapsys.system.pk}});">Set Autopilot</a>
     {% endif %}
