Change tiled system details to tabbed.

--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -10,9 +10,13 @@
 {
     margin-bottom: 150px;
 }
+#sysTabHolder
+{
+    width: 600px;
+}
 .sysDetailsFooter
 {
-    text-align: center;
+    text-align: left;
 }
 .systemTooltip
 {
