--- a/evewspace/Map/static/css/map.css
+++ b/evewspace/Map/static/css/map.css
@@ -171,6 +171,7 @@ textarea
   border-radius: 8px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   position: relative;
+  z-index: 3;
   width: auto;
 }
 
