--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -8,7 +8,7 @@
             <strong>Class: {{mapsys.system.sysclass}}</strong>
         </div>
         <div>
-            <strong>Effect: {{mapsys.system.effect}}</strong>
+            <strong>Effect: {{mapsys.system.get_spec.effect}}</strong>
         </div>
         <div>
             <strong>Probable Statics: <br />
@@ -26,7 +26,7 @@
         Null Sec ({{mapsys.system.security|floatformat}})
         {% endif %}
     </strong>
-    {% if mapsys.system.sov %}
+    {% if mapsys.system.get_spec.sov %}
         <br />
         <strong>Sov: {{mapsys.system.get_spec.sov}}</strong>
     {% endif %}
@@ -39,7 +39,7 @@
     <span class="sysLastScanned label {% if scanwarning  %} label-important {% endif %}">
         Last Scanned: {{mapsys.system.lastscanned|naturaltime}}
     </span><br /> 
-     <span class="statsText label label-inverse"> NPC: {{mapsys.system.npckills}} Ship: {{mapsys.system.shipkills}} Pod: {{mapsys.system.podkills}}{% if mapsys.system.sysclass > 6 %} Jumps: {{mapsys.system.jumps}} {% endif %}</span> 
+     <span class="statsText label label-inverse"> NPC: {{mapsys.system.npckills}} Ship: {{mapsys.system.shipkills}} Pod: {{mapsys.system.podkills}}{% if mapsys.system.sysclass > 6 %} Jumps: {{mapsys.system.get_spec.jumps}} {% endif %}</span> 
      <br /> 
     <p class="statusText label label-success">SIG: {{mapsys.system.signatures.count}} POS: {{mapsys.system.poses.count}} Pilots: {{mapsys.system.active_pilots.count}}</p><br />
     {% if mapsys.system.occupied %}
