Fix issue collector styling.

--- a/evewspace/core/templates/feedback_panel.html
+++ b/evewspace/core/templates/feedback_panel.html
@@ -1,5 +1,5 @@
 {% if render %}
-<div style="margin-left: 400px;">
+<div class="feedbackPanel">
 <div class="feedbackButtonPanel btn-group">
     <button class="btn btn-inverse" id="bugReportButton">Report Bug</button>
     <button class="btn btn-inverse" id="feedbackReportButton">Feedback</button>
