Add basic user admin UI plus framework for group admin. [#EW-32]

--- a/evewspace/core/static/css/base.css
+++ b/evewspace/core/static/css/base.css
@@ -40,6 +40,11 @@ BODY
 {
     font-size: 8pt;
 }
+body .modal
+{
+    width: 580px;
+    margin-left: -270px;
+}
 .stStatusHeader
 {
     text-align: left;
