--- a/evewspace/account/templates/user_admin_entries.html
+++ b/evewspace/account/templates/user_admin_entries.html
@@ -1,3 +1,3 @@
 {% for data in user_admin_registry %}
-    <li><a href="#{{data|slugify}}" data-toggle="tab">{{data}}</a></li>
+    <li><a href="#useradmin-{{data|slugify}}" data-toggle="tab">{{data}}</a></li>
 {% endfor %}
