Use table-condensed for singatures table. #EW-81 #resolved

--- a/evewspace/Map/templates/system_signatures.html
+++ b/evewspace/Map/templates/system_signatures.html
@@ -1,5 +1,5 @@
 {% load humanize %}
-<table class="table sysSigsTable" cellspacing="0">
+<table class="table table-condensed sysSigsTable" cellspacing="0">
     <tr>
     <th>Actions</th>
     <th title="Updated Since Downtme">Upd.</th>
