--- a/evewspace/Teamspeak/templates/ts_userlist.html
+++ b/evewspace/Teamspeak/templates/ts_userlist.html
@@ -1,1 +1,5 @@
-<p class="label label-info">No TS available</p>
+    <ul>
+    {% for x in clientlist %}
+        <li>{{x.client_nickname}}</li>
+    {% endfor %}
+    </ul>
