--- a/evewspace/Teamspeak/templates/ts_userlist.html
+++ b/evewspace/Teamspeak/templates/ts_userlist.html
@@ -1,5 +1,11 @@
     <ul>
     {% for x in clientlist %}
-        <li>{{x.client_nickname}}</li>
+        {% if x.client_nickname != "evewspace" %}
+            {% if x.client_away == 0 %}
+            <li>{{x.client_nickname}}</li>
+            {% else %}
+            <li>[AFK] {{x.client_nickname}}</li>
+            {% endif %}
+        {% endif %}
     {% endfor %}
     </ul>
