--- a/evewspace/Teamspeak/templates/teamspeak_settings.html
+++ b/evewspace/Teamspeak/templates/teamspeak_settings.html
@@ -1,4 +1,5 @@
 <form id="ts3GeneralSettingsForm" action="/teamspeak/settings/general/" method="post">
+    {% csrf_token %}
     <table>
         <tr>
             <td>Hostname of TS3 Server:</td>
