Fix space in system details template

--- a/evewspace/Map/templates/system_details.html
+++ b/evewspace/Map/templates/system_details.html
@@ -64,7 +64,7 @@
         Towers:
         <ul>
             {% for pos in system.poses.all %}
-            <li>P:{{pos.planet}} &nbspM: {{pos.moon}} - {{pos.towertype.name}} - {{pos.corporation.name}} - 
+            <li>P:{{pos.planet}} &nbsp;M: {{pos.moon}} - {{pos.towertype.name}} - {{pos.corporation.name}} - 
                 {% if pos.status == 0 %}
 	            <span class="label label-info">Status: UNANCHORED</span>
 	           	{% endif %}
