--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -32,7 +32,11 @@
         <ul id="intelDropdown" class="dropdown-menu" role="menu">
         <li><a href="http://www.wormnav.com/index.php?locus={{system.name}}" target="_blank">Wormnav</a></li>
         <li><a href="http://www.staticmapper.com/index.php?system={{system.name}}" target="_blank">StaticMapper</a></li>
+        {% if system.sysclass < 7 %}
         <li><a href="http://evemaps.dotlan.net/system/{{system.name}}" target="_blank">Dotlan</a></li>
+        {% else %}
+        <li><a href="http://evemaps.dotlan.net/map/{{system.region.name}}/{{system.name}}" target="_blank">Dotlan</a></li>
+        {% endif %}
         <li><a href="http://www.zkillboard.com/system/{{system.pk}}" target="_blank">zKillboard</a></li>
         {% if system.sysclass < 7 %}
         <li><a href="http://www.wormhol.es/{{system.name}}" target="_blank">Wormhol.es</a></li>
