Initial template changes for django 1.6 migration

--- a/evewspace/core/templates/base.html
+++ b/evewspace/core/templates/base.html
@@ -29,7 +29,7 @@
         <div id="baseNavDiv" class="navbar">
             <div class="navbar-inner">
                 <ul class="nav">
-                    <a class="brand" href="{% url core.views.home_view %}">Eve W-Space</a>
+                    <a class="brand" href="{% url 'core.views.home_view' %}">Eve W-Space</a>
                     {% load coretags %}
                     {% nav_entries %}
                     {% comment %}    
