--- a/evewspace/Teamspeak/templates/teamspeak_settings_holder.html
+++ b/evewspace/Teamspeak/templates/teamspeak_settings_holder.html
@@ -1,20 +1,3 @@
-//    eve w-space
-//    copyright (c) 2013  andrew austin and other contributors
-//
-//    this program is free software: you can redistribute it and/or modify
-//    it under the terms of the gnu general public license as published by
-//    the free software foundation, either version 3 of the license, or
-//    (at your option) any later version. an additional term under section
-//    7 of the gpl is included in the license file.
-//
-//    this program is distributed in the hope that it will be useful,
-//    but without any warranty; without even the implied warranty of
-//    merchantability or fitness for a particular purpose.  see the
-//    gnu general public license for more details.
-//
-//    you should have received a copy of the gnu general public license
-//    along with this program.  if not, see <http://www.gnu.org/licenses/>.
-
 <script type="text/javascript" src=/static/js/ts_settings.js></script>
-<div id="ts3generalsettings" class="accordion-body collapse">
+<div id="ts3generalsettings" class="accordion-body active">
 </div>
