--- a/evewspace/Map/templates/system_tooltip.html
+++ b/evewspace/Map/templates/system_tooltip.html
@@ -1,3 +1,4 @@
+{% load maptags %}
 {% for mapsys in map_systems %}
 <div id="sys{{mapsys.pk}}Tip" class="systemTooltip tip">
 <div class="mapSysInfo row">
@@ -41,7 +42,7 @@
     </span><br /> 
      <span class="statsText label label-inverse"> NPC: {{mapsys.system.npckills}} Ship: {{mapsys.system.shipkills}} Pod: {{mapsys.system.podkills}}{% if mapsys.system.sysclass > 6 %} Jumps: {{mapsys.system.get_spec.jumps}} {% endif %}</span> 
      <br /> 
-    <p class="statusText label label-success">SIG: {{mapsys.system.signatures.count}} POS: {{mapsys.system.poses.count}} Pilots: {{mapsys.system.active_pilots.count}}</p><br />
+     <p class="statusText label label-success">SIG: {{mapsys.system.signatures.count}} POS: {{mapsys.system.poses.count}} Pilots: {{mapsys.system.pilot_count}}</p><br />
     {% if mapsys.system.occupied %}
     <div class="occupiedTooltip label label-important"> Occupied: <br /> {{mapsys.system.occupied|safe}}</div>
     {% endif %}
