Fix broken submit on add system box.

--- a/evewspace/Map/templates/add_system_box.html
+++ b/evewspace/Map/templates/add_system_box.html
@@ -68,7 +68,7 @@
 </div>
     <div class="modal-footer">
         <a href="#" id="sysCloseButton" class="btn" data-dismiss="modal">Close</a>
-            <a href="#" id="sysAddSubmit" onclick="$('sysAddForm').submit();" class="btn btn-primary">Add System</a>
+            <a href="#" id="sysAddSubmit" onclick="$('#sysAddForm').submit();" class="btn btn-primary">Add System</a>
     </div>
         <script type="text/javascript">
            $('#sysAddForm').submit(function(e){
