--- a/evewspace/account/templates/user_list.html
+++ b/evewspace/account/templates/user_list.html
@@ -43,6 +43,7 @@
                     });
                 });
         {% endif %}
+    {% if member_list.number < member_list.paginator.num_pages %}
         $('#userNextLink').click(function(){
                 $.ajax({
                     url: "/account/admin/user/list/{{member_list.next_page_number}}/",
@@ -57,6 +58,7 @@
                     }
                     });
                 });
+        {% endif %}
     </script>
 
 </div>
