--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -3,38 +3,38 @@
         <h4>Add POS: {{system.name}}</h4>
     </div>
     <div class="modal-body">
-    <ul class="nav nav-pills">
-      <li class="active">Auto</li>
-      <li>Manual</li>
-    </ul>
-    <div class="tab-content">
-      <div class="tab-pane active" id="auto-add">
-      </div>
-      <div class="tab-pane" id="manual-add">
-        <form id="addPOSForm" action="/pos/{{system.pk}}/add" method="POST">
-          {% csrf_token %}
-          Full Corp Name: <input id="corpBox" class="corpAuto" name="corp" type="text" > <br />
+      <ul class="nav nav-pills">
+        <li class="active"><a id="auto" href="#" data-toggle="tab">Auto</a></li>
+        <li><a href="#" data-toggle="tab" id="manual">Manual</a></li>
+      </ul>
+      <form id="addPOSForm" action="/pos/{{system.pk}}/add" method="POST">
+        {% csrf_token %}
+        <input id="auto-field" name="auto" value="1" type="hidden">
+        Full Corp Name: <input id="corpBox" class="corpAuto" name="corp" type="text" > <br />
+        <div class="manual-fields">
           <span class="label label-warning" id="digiterror">Please enter digits only for planet and moon. </span><br /><br />
           Planet: <input name="planet" class="input-mini" type="text"> 
           Moon: <input name="moon" class="input-mini" type="text"> <br />
           Tower Name: <input name="name" type="text"> <br />
           Tower Type: <input id="towertype" class="towerAuto" name="tower" type="text"> <br />
-          Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp Unanchored 
-          <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp Anchored
-          <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp Onlining
-          <br /><input type="radio" name="status" onclick="Test(this);" value="3"> &nbsp Reinforced
-          <br /><input type="radio" name="status" value="4" onclick="Test(this);" checked="checked"> &nbsp Online
-          <br />
-          <div id="rftime" class="rftimerdiv" style="display: none">
-              RF Timer:<br /> D: <input name="rfdays" class="input-mini" type="text">
-              H: <input name="rfhours" class="input-mini" type="text">
-              M: <input name="rfminutes" class="input-mini" type="text">
-          </div>
-          <br />Fitting: <br />
-          <textarea cols=40 rows=10 name="fitting"></textarea><br />
+        </div>
+        Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp Unanchored 
+        <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp Anchored
+        <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp Onlining
+        <br /><input type="radio" name="status" onclick="Test(this);" value="3"> &nbsp Reinforced
+        <br /><input type="radio" name="status" value="4" onclick="Test(this);" checked="checked"> &nbsp Online
+        <br />
+        <div id="rftime" class="rftimerdiv" style="display: none">
+            RF Timer:<br /> D: <input name="rfdays" class="input-mini" type="text">
+            H: <input name="rfhours" class="input-mini" type="text">
+            M: <input name="rfminutes" class="input-mini" type="text">
+        </div>
+        <br />Fitting: <br />
+        <textarea cols=40 rows=10 name="fitting"></textarea><br />
+        <div class="manual-fields">
           Parse as D-Scan Paste: <input type="checkbox" name="dscan" value="1"> <br />
-        </form>
-    </div>
+        </div>
+      </form>
   </div>
 </div>
     <div class="modal-footer">
@@ -56,5 +56,14 @@
                 AddPOS({{system.pk}});
                 $('#modalHolder').modal('hide');
                 });
+    $('#auto').click(function(e){
+        $('.manual-fields').hide();
+        $('#auto-field').val('1');
+    });
+    $('#manual').click(function(e){
+        $('.manual-fields').show();
+        $('#auto-field').val('0');
+    });
     </script>
+    <style>.manual-fields{display: none;}</style>
 </div>
