Make HTML valid by correctly finishing non-breaking spaces

--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -18,10 +18,10 @@
           Tower Name: <input name="name" type="text"> <br />
           Tower Type: <input id="towertype" class="towerAuto" name="tower" type="text"> <br />
         </div>
-        Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp Unanchored 
-        <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp Anchored
-        <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp Onlining
-        <br /><input type="radio" name="status" onclick="Test(this);" value="3"> &nbsp Reinforced
+        Status: <br /><input type="radio" onclick="Test(this);" name="status" value="0">&nbsp; Unanchored
+        <br /><input type="radio" name="status" onclick="Test(this);" value="1">&nbsp; Anchored
+        <br /><input type="radio" name="status" onclick="Test(this);" value="2">&nbsp; Onlining
+        <br /><input type="radio" name="status" onclick="Test(this);" value="3"> &nbsp; Reinforced
         <br /><input type="radio" name="status" value="4" onclick="Test(this);" checked="checked"> &nbsp Online
         <br />
         <div id="rftime" class="rftimerdiv" style="display: none">
