--- a/evewspace/POS/templates/add_pos.html
+++ b/evewspace/POS/templates/add_pos.html
@@ -1,7 +1,7 @@
 <div title="Add Starbase" id="addPOSDialog" class="addPOSDialog">
     <div class="modal-header">
         <h4>Add POS: {{system.name}}</h4>
-      <ul class="nav nav-pills">
+      <ul class="nav nav-pills" style="margin-bottom:0">
         <li class="active"><a id="auto" href="#" data-toggle="tab">Auto</a></li>
         <li><a href="#" data-toggle="tab" id="manual">Manual</a></li>
       </ul>
