Change pos type name to pos name in POS details list.

--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -12,7 +12,7 @@
         <span class="planetno"><strong>{{pos.planet}}</strong></span>
 		<span class="moonlabel">Moon: </span>
         <span class="moonno"><strong>{{pos.moon}}<strong></span>&nbsp
-        <span class="postype"><strong>{{pos.towertype.name}}</strong></span>&nbsp &nbsp
+        <span class="posname"><strong>{{pos.posname}}</strong></span>&nbsp &nbsp
         <br />
         <div class="posSummary">
             {% if pos.status == 0 %}
