Re-add tower type and fix spacing.

--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -15,6 +15,7 @@
         <span class="posname"><strong>{{pos.posname}}</strong></span>&nbsp &nbsp
         <br />
         <div class="posSummary">
+            <span class="postype"><strong>{{pos.towertype.name}}</strong></span><br />
             {% if pos.status == 0 %}
                 <span class="label label-info">Status: UNANCHORED</span>
             {% endif %}
