Drop www from zkillboard links

--- a/evewspace/Map/templates/system_menu.html
+++ b/evewspace/Map/templates/system_menu.html
@@ -41,7 +41,7 @@
         {% else %}
         <li><a href="http://evemaps.dotlan.net/map/{{system.region.name.split|join:"_"}}/{{system.name.split|join:"_"}}" target="_blank">Dotlan</a></li>
         {% endif %}
-        <li><a href="http://www.zkillboard.com/system/{{system.pk}}" target="_blank">zKillboard</a></li>
+        <li><a href="http://zkillboard.com/system/{{system.pk}}" target="_blank">zKillboard</a></li>
         {% if system.sysclass < 7 %}
         <li><a href="http://www.wormhol.es/{{system.name}}" target="_blank">Wormhol.es</a></li>
         {% endif %}
