--- a/evewspace/POS/templates/posdetails_small.html
+++ b/evewspace/POS/templates/posdetails_small.html
@@ -61,11 +61,11 @@
             {% endif %}
             <br />
             <span class="poslist_corplabel">Corp: </span>
-			<a href="http://www.zkillboard.com/corporation/{{pos.corporation.id}}/" target="_blank" class="killboard_link">{{pos.corporation.name}}</a>
+			<a href="http://zkillboard.com/corporation/{{pos.corporation.id}}/" target="_blank" class="killboard_link">{{pos.corporation.name}}</a>
             <span class="poslist_ticker">[{{pos.corporation.ticker}}]</span><br />
             {% if pos.corporation.alliance %}
             <span class="poslist_alliancelable">Alliance: </span>
-            <a href="http://www.zkillboard.com/alliance/{{pos.corporation.alliance.id}}/" target="_blank" class="killboard_link">{{pos.corporation.alliance.name}}</a>
+            <a href="http://zkillboard.com/alliance/{{pos.corporation.alliance.id}}/" target="_blank" class="killboard_link">{{pos.corporation.alliance.name}}</a>
             <span class="poslist_ticker">[{{pos.corporation.alliance.shortname}}]</span><br />
             {% endif %}
             <span class="poslist_posname">Name: {{pos.posname}}</span> <br />
