--- a/evewspace/account/templates/user_admin.html
+++ b/evewspace/account/templates/user_admin.html
@@ -18,6 +18,7 @@
                 return false;
             });
 </script>
+<button class='btn btn-success' onclick="GetCreateUserDialog();">Create User <i class='icon-plus'></i></button>
 <div id="userTableHolder">
 </div>
 
